--- a/requirements_local.txt
+++ b/requirements_local.txt
@@ -16,6 +16,8 @@ scikit-learn==1.3.1
 open-clip-torch == 2.23.0
 timm == 0.9.12
 transformers == 4.38.0
+# embeds storing
+pyarrow == 19.0.1
 # fastapi
 fastapi==0.89.0
 uvicorn==0.20.0
