--- a/requirements_local.txt
+++ b/requirements_local.txt
@@ -10,6 +10,8 @@ requests==2.32.3
 # ml
 notebook==7.2.1
 scikit-learn==1.3.1
+# NLP
+nltk==3.6.1
 # open_clip
 #torch == 2.4.0 to install use pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 #torchvision == 0.19.0
